--- a/index.html
+++ b/index.html
@@ -3,22 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Character Counter
-    </title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Character counter</title>
+    <link href="./style.css" rel="stylesheet"/>
 </head>
 <body>
-   
-        <div class="mini_container">
-            <h1>Real-time Charater Counter</h1>
-            <textarea name="text" id="input" cols="40" rows="6" maxlength="100" ></textarea>
-
-
-            <div class="numberCharacters">
-            <p>Total Characters: <span id="totalCharacters">0</span></p>
-            <p >Remaining: <span id="remainingCharacters">50</span></p>
+    <div class="card">
+        <h2>Real-time Charater Counter</h2>
+        <textarea id="input" placeholder="Please Write Your Text Here....." cols="40" rows="5"></textarea>
+        <div class="output">
+            <p>Total Characters:<span id="total">0</span></p>
+        <p>Remaining:<span id="rem">50</span></p>
         </div>
-        </div>
-    <script src="./script.js"></script>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
